Overflowing hero image fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -157,7 +157,7 @@ background: rgba(0, 0, 0, 0.7);
 	
 
 }
-.home,
+
 .about-page,
 .contact,
 .success-page,
